add live matches and do a bit of cleanup

--- a/calendar.html
+++ b/calendar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Oficiálna stránka SAILH – Slovenská asociácia in-line hokeja. Novinky, kluby, galéria a podujatia." />
+    <meta name="description" content="Oficiálna stránka SAILH - Slovenská asociácia in-line hokeja. Novinky, kluby, galéria a podujatia." />
     <meta name="author" content="SAILH" />
     <title>SAILH</title>
     <link rel="stylesheet" href="styles.css" />
@@ -12,9 +12,9 @@
     <header class="header">
         <div class="logo">
             <picture>
-                <source srcset="https://alaviks.com/saihl/logo_80.webp 1x, https://alaviks.com/saihl/logo_160.webp 2x, https://alaviks.com/saihl/logo_200.webp 3x" type="image/webp">
-                <source srcset="https://alaviks.com/saihl/logo_80.png 1x, https://alaviks.com/saihl/logo_160.png 2x, https://alaviks.com/saihl/logo_200.png 3x" type="image/png">
-                <img src="https://alaviks.com/saihl/logo_80.png" alt="SAILH Logo" class="logo-img">
+                <source srcset="logo_80.webp 1x, logo_160.webp 2x, logo_200.webp 3x" type="image/webp">
+                <source srcset="logo_80.png 1x, logo_160.png 2x, logo_200.png 3x" type="image/png">
+                <img src="logo_80.png" alt="SAILH Logo" class="logo-img">
             </picture>
         </div>
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
@@ -85,7 +85,7 @@
 
     </div>
 
-    <div class="footer-bottom">© 2025 SAILH – Všetky práva vyhradené</div>
+    <div class="footer-bottom">© 2025 SAILH - Všetky práva vyhradené</div>
 </footer>
 </body>
 </html>
