--- a/clubs.html
+++ b/clubs.html
@@ -12,9 +12,9 @@
     <header class="header">
         <div class="logo">
             <picture>
-                <source srcset="https://alaviks.com/saihl/logo_80.webp 1x, https://alaviks.com/saihl/logo_160.webp 2x, https://alaviks.com/saihl/logo_200.webp 3x" type="image/webp">
-                <source srcset="https://alaviks.com/saihl/logo_80.png 1x, https://alaviks.com/saihl/logo_160.png 2x, https://alaviks.com/saihl/logo_200.png 3x" type="image/png">
-                <img src="https://alaviks.com/saihl/logo_80.png" alt="SAILH Logo" class="logo-img">
+                <source srcset="logo_80.webp 1x, logo_160.webp 2x, logo_200.webp 3x" type="image/webp">
+                <source srcset="logo_80.png 1x, logo_160.png 2x, logo_200.png 3x" type="image/png">
+                <img src="logo_80.png" alt="SAILH Logo" class="logo-img">
             </picture>
         </div>
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
@@ -69,8 +69,8 @@
 
         <!-- BEE WARE -->
         <div style="text-align: center; max-width: 220px;">
-            <a href="https://sailh.sk/beeware.jpg" target="_blank">
-                <img src="https://alaviks.com/saihl/beeware.jpeg" alt="BEE WARE" style="width: 100%; height: auto; max-height: 180px; object-fit: contain; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); transition: transform 0.2s;">
+            <a href="https://sailh.sk/beeware.jpeg" target="_blank">
+                <img src="beeware.jpeg" alt="BEE WARE" style="width: 100%; height: auto; max-height: 180px; object-fit: contain; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.15); transition: transform 0.2s;">
             </a>
             <p style="margin: 12px 0 0; font-weight: bold; font-size: 1.1rem; color: #222;">BEE WARE</p>
         </div>
@@ -138,7 +138,7 @@
 
     </div>
 
-    <div class="footer-bottom">© 2025 SAILH – Všetky práva vyhradené</div>
+    <div class="footer-bottom">© 2025 SAILH - Všetky práva vyhradené</div>
 </footer>
 </body>
 </html>
