--- a/donate.html
+++ b/donate.html
@@ -12,9 +12,9 @@
     <header class="header">
         <div class="logo">
             <picture>
-                <source srcset="https://alaviks.com/saihl/logo_80.webp 1x, https://alaviks.com/saihl/logo_160.webp 2x, https://alaviks.com/saihl/logo_200.webp 3x" type="image/webp">
-                <source srcset="https://alaviks.com/saihl/logo_80.png 1x, https://alaviks.com/saihl/logo_160.png 2x, https://alaviks.com/saihl/logo_200.png 3x" type="image/png">
-                <img src="https://alaviks.com/saihl/logo_80.png" alt="SAILH Logo" class="logo-img">
+                <source srcset="logo_80.webp 1x, logo_160.webp 2x, logo_200.webp 3x" type="image/webp">
+                <source srcset="logo_80.png 1x, logo_160.png 2x, logo_200.png 3x" type="image/png">
+                <img src="logo_80.png" alt="SAILH Logo" class="logo-img">
             </picture>
         </div>
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
@@ -37,13 +37,13 @@
 
         <p>
             S radosťou otvárame dvere spolupráce pre všetkých, ktorí majú záujem prispieť
-            k rozvoju tohto fascinujúceho športu. Privítame každého partnera – či už ide
-            o jednotlivcov, firmy alebo organizácie – ochotných podporiť náš cieľ
+            k rozvoju tohto fascinujúceho športu. Privítame každého partnera - či už ide
+            o jednotlivcov, firmy alebo organizácie - ochotných podporiť náš cieľ
             rozšíriť inline hokej a urobiť ho dostupnejším pre všetkých.
         </p>
 
         <p>
-            Spolupráca môže nadobudnúť rôzne formy – od materiálnej podpory, ako sú
+            Spolupráca môže nadobudnúť rôzne formy - od materiálnej podpory, ako sú
             vybavenie či finančné príspevky, až po organizačnú pomoc pri príprave podujatí.
             Veríme, že spoločne môžeme vytvoriť niečo výnimočné a inšpirovať ďalších.
         </p>
@@ -56,7 +56,7 @@
         </p>
 
         <p>
-            Na oplátku sme pripravení podporiť vás – či už zdieľaním vašich aktivít,
+            Na oplátku sme pripravení podporiť vás - či už zdieľaním vašich aktivít,
             propagáciou vašich projektov, alebo iným spôsobom, ktorý prinesie výhody
             obom stranám.
         </p>
@@ -121,7 +121,7 @@
 
     </div>
 
-    <div class="footer-bottom">© 2025 SAILH – Všetky práva vyhradené</div>
+    <div class="footer-bottom">© 2025 SAILH - Všetky práva vyhradené</div>
 </footer>
 </body>
 </html>
