--- a/media.html
+++ b/media.html
@@ -12,9 +12,9 @@
     <header class="header">
         <div class="logo">
             <picture>
-                <source srcset="https://alaviks.com/saihl/logo_80.webp 1x, https://alaviks.com/saihl/logo_160.webp 2x, https://alaviks.com/saihl/logo_200.webp 3x" type="image/webp">
-                <source srcset="https://alaviks.com/saihl/logo_80.png 1x, https://alaviks.com/saihl/logo_160.png 2x, https://alaviks.com/saihl/logo_200.png 3x" type="image/png">
-                <img src="https://alaviks.com/saihl/logo_80.png" alt="SAILH Logo" class="logo-img">
+                <source srcset="logo_80.webp 1x, logo_160.webp 2x, logo_200.webp 3x" type="image/webp">
+                <source srcset="logo_80.png 1x, logo_160.png 2x, logo_200.png 3x" type="image/png">
+                <img src="logo_80.png" alt="SAILH Logo" class="logo-img">
             </picture>
         </div>
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
@@ -56,7 +56,7 @@
             </div> </div> </section>
 
     <section aria-labelledby="facebook-content">
-        <h2 id="facebook-content">Facebook – SAILH</h2>
+        <h2 id="facebook-content">Facebook - SAILH</h2>
         <p>Najnovšie príspevky z našej Facebook stránky:</p>
 
         <div id="facebook-widget-container" style="display: flex; justify-content: center; margin-top: 30px;">
@@ -127,7 +127,7 @@
 
     </div>
 
-    <div class="footer-bottom">© 2025 SAILH – Všetky práva vyhradené</div>
+    <div class="footer-bottom">© 2025 SAILH - Všetky práva vyhradené</div>
 </footer>
 
     <!-- Facebook SDK with better error handling -->
@@ -152,7 +152,7 @@
 
         // Load Facebook SDK
         (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s[0];
+            var js, fjs = d.getElementsByTagName(s[0]);
             if (d.getElementById(id)) return;
             js = d.createElement(s); js.id = id;
             js.src = "https://connect.facebook.net/sk_SK/sdk.js";
