--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Oficiálna stránka SAILH – Slovenská asociácia in-line hokeja. Novinky, kluby, galéria a podujatia." />
+    <meta name="description" content="Oficiálna stránka SAILH – Slovenská asociácia in-line hokeja. Live výsledky." />
     <meta name="author" content="SAILH" />
-    <title>SAILH</title>
+    <title>SAILH - Domov</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <header class="header">
         <div class="logo">
             <picture>
-                <source srcset="https://alaviks.com/saihl/logo_80.webp 1x, https://alaviks.com/saihl/logo_160.webp 2x, https://alaviks.com/saihl/logo_200.webp 3x" type="image/webp">
-                <source srcset="https://alaviks.com/saihl/logo_80.png 1x, https://alaviks.com/saihl/logo_160.png 2x, https://alaviks.com/saihl/logo_200.png 3x" type="image/png">
-                <img src="https://alaviks.com/saihl/logo_80.png" alt="SAILH Logo" class="logo-img">
+                <source srcset="logo_80.webp 1x, logo_160.webp 2x, logo_200.webp 3x" type="image/webp">
+                <source srcset="logo_80.png 1x, logo_160.png 2x, logo_200.png 3x" type="image/png">
+                <img src="logo_80.png" alt="SAILH Logo" class="logo-img">
             </picture>
         </div>
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
         <nav class="menu" role="navigation" aria-label="Hlavné menu">
-            <a href="index.html">Domov</a>
+            <a href="index.html" class="active">Domov</a>
             <a href="news.html">Novinky</a>
             <a href="gallery.html">Galéria</a>
             <a href="clubs.html">Kluby</a>
-            <a href="partners.html">Partnery</a>
+            <a href="partners.html">Partneri</a>
             <a href="donate.html">Darujte 2%</a>
             <a href="https://www.inlineliga.sk">Amatérska liga</a>
         </nav>
@@ -31,108 +31,111 @@
 
     <div class="video-banner">
         <video autoplay muted loop playsinline class="banner-video">
-            <source src="https://alaviks.com/saihl/banner.webm" type="video/webm" />
-            <source src="https://alaviks.com/saihl/banner.mp4" type="video/mp4" />
+            <source src="banner.webm" type="video/webm" />
+            <source src="banner.mp4" type="video/mp4" />
             Váš prehliadač nepodporuje prehrávanie videa.
         </video>
     </div>
 
-    <div class="layout">
-        <main class="hero main-content">
-            <h1>Slovenská asociácia in-line hokeja</h1>
-            <p>Oficiálne informácie, výsledky, aktuality a podujatia.</p>
-        </main>
-
-        <aside class="rss-sidebar">
-            <div class="rss-box">
-                <h3>Svetové novinky</h3>
-                <p class="rss-source">Zdroj: MIHWA.org</p>
-                <div id="rss-feed-content"></div>
-                <div id="rss-error" class="rss-error">Chyba pri načítaní RSS.</div>
+    <div class="layout" style="justify-content: center;">
+        <main class="hero main-content" style="max-width: 800px; width: 100%;">
+            
+            <div class="live-scoreboard-section">
+                <h2>Live Výsledky</h2>
+                <div id="matchList" class="match-container">
+                    <p>Načítavam zápasy...</p>
+                </div>
             </div>
-        </aside>
+
+        </main>
     </div>
 
     <footer class="footer">
-    <div class="footer-grid">
-
-        <div>
-            <h4 class="footer-title">SAILH</h4>
-            <p class="footer-text">
-                Slovenská asociácia in-line hokeja.<br><br>
-                Oreganová 1178/1<br><br>
-                900 46 Most pri Bratislave - Studené<br><br>
-                Registračné číslo: VVS/1-900/90-72711<br>
-<br>
+        <div class="footer-grid">
+            <div>
+                <h4 class="footer-title">SAILH</h4>
+                <p class="footer-text">
+                    Slovenská asociácia in-line hokeja.<br><br>
+                    Oreganová 1178/1<br>
+                    900 46 Most pri Bratislave - Studené<br><br>
+                    Registračné číslo: VVS/1-900/90-72711
+                </p>
+            </div>
+            <div>
+                <h4 class="footer-title">Navigácia</h4>
+                <ul class="footer-list">
+                    <li><a href="https://ives.minv.sk/rmno/detail/13542098669735168654">O asociácii</a></li>
+                    <li><a href="clubs.html">Kluby</a></li>
+                    <li><a href="https://www.inlineliga.sk/">Amatérska Liga</a></li>
+                    <li><a href="partners.html">Partneri</a></li>
+                    <li><a href="media.html">Médiá</a></li>
+                    <li><a href="calendar.html">Kalendár</a></li>
+                    <li><a href="privacy-policy.html">Ochrana údajov</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="footer-title">Kontakt</h4>
+                <p class="footer-text"><i class="fas fa-at icon-red"></i> pejchalr@gmail.com</p>
+                <p class="footer-text"><i class="fas fa-phone icon-red"></i> +421 905 627 715</p>
+                <p class="footer-text"><i class="fas fa-id-card icon-red"></i> IČO: 57133671</p>
+                <p class="footer-text"><i class="fas fa-file-alt icon-red"></i> DIČ: 2122632930</p>
+            </div>
+            <div>
+                <h4 class="footer-title">Newsletter</h4>
+                <p class="footer-text">Prihláste sa na odber noviniek:</p>
+                <input type="email" placeholder="Váš e-mail" class="footer-input">
+                <button class="footer-btn">Prihlásiť</button>
+            </div>
         </div>
+        <div class="footer-bottom">© 2026 SAILH - Všetky práva vyhradené</div>
+    </footer>
 
-        <div>
-            <h4 class="footer-title">Navigácia</h4>
-            <ul class="footer-list">
-                <li><a href="https://ives.minv.sk/rmno/detail/13542098669735168654">O asociácii</a></li>
-                <li><a href="clubs.html">Kluby</a></li>
-                <li><a href="https://www.inlineliga.sk/">Amatérska Liga</a></li>
-                <li><a href="partners.html">Partneri</a></li>
-                <li><a href="media.html">Médiá</a></li>
-                <li><a href="calendar.html">Kalendár</a></li>
-                <li><a href="privacy-policy.html">Ochrana údajov</a></li>
-            </ul>
-        </div>
+    <script>
+        async function loadMatches() {
+            try {
+                const response = await fetch("https://Lucifer21sk.pythonanywhere.com/matches/public");
+                let matches = await response.json();
 
-        <div>
-            <h4 class="footer-title">Kontakt</h4>
-            <p class="footer-text"><i class="fas fa-at icon-red"></i> pejchalr@gmail.com</p>
-            <p class="footer-text"><i class="fas fa-phone icon-red"></i> +421 905 627 715</p>
-            <p class="footer-text"><i class="fas fa-id-card icon-red"></i> IČO: 57133671</p>
-            <p class="footer-text"><i class="fas fa-file-alt icon-red"></i> DIČ: 2122632930</p>
-        </div>
+                // 🚨 THE FIX: Keep ONLY matches that are currently 'live' 🚨
+                matches = matches.filter(m => m.status === "live");
 
-        <div>
-            <h4 class="footer-title">Newsletter</h4>
-            <p class="footer-text">Prihláste sa na odber noviniek:</p>
-            <input type="email" placeholder="Váš e-mail" class="footer-input">
-            <button class="footer-btn">Prihlásiť</button>
-        </div>
+                const container = document.getElementById("matchList");
+                container.innerHTML = ""; 
 
-    </div>
+                if (matches.length === 0) {
+                    container.innerHTML = "<p>Aktuálne sa nehrajú žiadne zápasy.</p>";
+                    return;
+                }
 
-    <div class="footer-bottom">© 2025 SAILH – Všetky práva vyhradené</div>
-</footer>
+                matches.forEach(m => {
+                    const statusClass = "status-live";
+                    const statusText = "NAŽIVO";
+                    
+                    let phaseText = m.phase;
+                    if(phaseText === "normal") phaseText = "Základná hracia doba";
+                    if(phaseText === "shootout") phaseText = "Nájazdy";
 
-<script>
-/* RSS loader with SL dictionary */
-async function loadRSS() {
-    const url = "https://api.rss2json.com/v1/api.json?rss_url=https://www.mihwa.org/feed/";
-    const box = document.getElementById("rss-feed-content");
-    const err = document.getElementById("rss-error");
+                    container.innerHTML += `
+                        <div class="match-card">
+                            <div class="status-badge ${statusClass}">${statusText}</div>
+                            <div class="scoreboard-display">
+                                <div class="team-name" style="text-align: right;">${m.home_team}</div>
+                                <div class="score-numbers">${m.home_score} - ${m.away_score}</div>
+                                <div class="team-name" style="text-align: left;">${m.away_team}</div>
+                            </div>
+                            <div class="match-phase">${phaseText}</div>
+                        </div>
+                    `;
+                });
 
-    const dict = [ [/World/gi, "Svet"], [/Hockey/gi, "Hokej"], [/Inline/gi, "In-line"], [/Team/gi, "Tím"], [/Match/gi, "Zápas"] ];
+            } catch (err) {
+                console.error("Error loading matches:", err);
+                document.getElementById("matchList").innerHTML = "<p>Chyba pri načítaní výsledkov.</p>";
+            }
+        }
 
-    try {
-        const res = await fetch(url);
-        const data = await res.json();
-        box.innerHTML = "";
-
-        data.items.slice(0,5).forEach(item => {
-            let title = item.title;
-            dict.forEach(([from,to]) => title = title.replace(from,to));
-
-            let desc = item.description.replace(/<[^>]*>/g, "").trim();
-            if (desc.length > 140) desc = desc.substring(0,140) + "...";
-
-            box.innerHTML += `
-            <div class="rss-item" style="padding:10px;background:#f7f7f7;border-left:4px solid #d90f23;margin-bottom:10px;border-radius:6px;">
-                <a href="${item.link}" target="_blank" style="font-weight:bold;color:#244b94;text-decoration:none;">${title}</a>
-                <div style="font-size:12px;color:#666;margin-top:4px;">${new Date(item.pubDate).toLocaleDateString("sk-SK")}</div>
-                <p style="font-size:11px; line-height:1.15; color:#555; margin-top:4px;">${desc}</p>
-            </div>`;
-        });
-    } catch(e) {
-        err.style.display = "block";
-    }
-}
-loadRSS();
-</script>
-
+        loadMatches();
+        setInterval(loadMatches, 5000); 
+    </script>
 </body>
 </html>
