--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,12 +3,78 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Oficiálna stránka SAILH - Slovenská asociácia in-line hokeja. Novinky, kluby, galéria a podujatia." />
-    <meta name="author" content="SAILH" />
-    <title>SAILH</title>
+    <meta name="description" content="Ochrana osobných údajov a GDPR - Slovenská asociácia in-line hokeja (SAILH)." />
+    <title>SAILH - Ochrana údajov</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>
+        /* Document Style Layout */
+        body {
+            background-color: #f4f7f6;
+        }
+
+        .content-box {
+            max-width: 900px;
+            margin: 40px auto;
+            background: white;
+            padding: 50px;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+            border-top: 5px solid #244b94; /* Blue top accent */
+            line-height: 1.6;
+            color: #333;
+        }
+
+        h1 {
+            color: #244b94;
+            font-size: 2.2em;
+            margin-top: 0;
+            text-align: center;
+            margin-bottom: 40px;
+            border-bottom: 2px solid #eee;
+            padding-bottom: 20px;
+        }
+
+        h2 {
+            color: #d90f23; /* Red subheadings */
+            font-size: 1.4em;
+            margin-top: 30px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            margin-bottom: 15px;
+            text-align: justify;
+        }
+
+        ul {
+            margin-bottom: 20px;
+            padding-left: 20px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        .highlight-box {
+            background: #f0f4ff;
+            padding: 20px;
+            border-left: 4px solid #244b94;
+            margin: 20px 0;
+            font-size: 0.95em;
+        }
+
+        /* Mobile Adjustments */
+        @media (max-width: 768px) {
+            .content-box {
+                padding: 25px;
+                margin: 20px;
+            }
+            h1 { font-size: 1.8em; }
+        }
+    </style>
 </head>
 <body>
+
     <header class="header">
         <div class="logo">
             <picture>
@@ -20,62 +86,127 @@
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
         <nav class="menu" role="navigation" aria-label="Hlavné menu">
             <a href="index.html">Domov</a>
-            <a href="news.html">Novinky</a>
-            <a href="gallery.html">Galéria</a>
-            <a href="clubs.html">Kluby</a>
-            <a href="partners.html">Partnery</a>
-            <a href="donate.html">Darujte 2%</a>
+            <a href="standing.html">Extraliga</a>
             <a href="https://www.inlineliga.sk">Amatérska liga</a>
+            <a href="clubs.html">Kluby</a>
+            <a href="news.html">MIHWA</a>
+            <a href="gallery.html">Galéria</a>            
+            <a href="partners.html">Partneri</a>              
         </nav>
     </header>
-<main class="content-box">
-        <h1>Politika ochrany osobných údajov</h1>
-        <p>Zásady spracúvania osobných údajov v súlade s platnou legislatívou.</p>
-</main>
+
+    <main class="content-box">
+        <h1>Ochrana osobných údajov (GDPR)</h1>
+
+        <div class="highlight-box">
+            <strong>Slovenská asociácia in-line hokeja (SAILH)</strong> rešpektuje vaše súkromie. 
+            Tento dokument vysvetľuje, ako spracúvame, uchovávame a chránime vaše osobné údaje v súlade 
+            s Nariadením EÚ 2016/679 (GDPR) a Zákonom č. 18/2018 Z. z. o ochrane osobných údajov.
+        </div>
+
+        <h2>1. Prevádzkovateľ</h2>
+        <p>
+            Prevádzkovateľom vašich osobných údajov je:<br>
+            <strong>Názov:</strong> Slovenská asociácia in-line hokeja<br>
+            <strong>Sídlo:</strong> Oreganová 1178/1, 900 46 Most pri Bratislave<br>
+            <strong>IČO:</strong> 57133671<br>
+            <strong>Email:</strong> pejchalr@gmail.com
+        </p>
+
+        <h2>2. Aké údaje zbierame?</h2>
+        <p>Spracúvame iba nevyhnutné údaje potrebné na fungovanie asociácie, organizáciu súťaží a komunikáciu s verejnosťou:</p>
+        <ul>
+            <li><strong>Údaje hráčov a funkcionárov:</strong> Meno, priezvisko, dátum narodenia, klubová príslušnosť, štatistiky.</li>
+            <li><strong>Kontaktné údaje:</strong> E-mailová adresa a telefónne číslo (pre komunikáciu s klubmi a partnermi).</li>
+            <li><strong>Fotografie a videá:</strong> Záznamy zo zápasov a podujatí zverejňované na účely propagácie športu.</li>
+            <li><strong>Cookies:</strong> Anonymné technické údaje potrebné pre správne fungovanie webstránky.</li>
+        </ul>
+
+        <h2>3. Účel spracúvania</h2>
+        <p>Vaše údaje používame na:</p>
+        <ul>
+            <li>Organizáciu a riadenie ligových súťaží (evidencia súpisiek, štatistiky).</li>
+            <li>Informovanie verejnosti o výsledkoch a dianí v in-line hokeji.</li>
+            <li>Komunikáciu s klubmi, hráčmi a partnermi.</li>
+            <li>Plnenie zákonných povinností (napr. Zákon o športe).</li>
+        </ul>
+
+        <h2>4. Zverejňovanie údajov</h2>
+        <p>
+            Na našej webovej stránke (www.sailh.sk) sú verejne dostupné iba údaje súvisiace so športovou činnosťou:
+            súpisky tímov (meno, číslo dresu), štatistiky zápasov a fotografie zo súťaží. 
+            Citlivé osobné údaje (adresy, rodné čísla) <strong>nie sú</strong> verejne prístupné.
+        </p>
+
+        <h2>5. Vaše práva</h2>
+        <p>Podľa GDPR máte právo:</p>
+        <ul>
+            <li>Požadovať prístup k vašim osobným údajom.</li>
+            <li>Požadovať opravu nesprávnych údajov.</li>
+            <li>Požadovať vymazanie údajov ("právo na zabudnutie"), ak už nie sú potrebné na zákonné účely.</li>
+            <li>Odvolať súhlas so spracovaním údajov (ak bol udelený).</li>
+        </ul>
+
+        <p>
+            Ak chcete uplatniť svoje práva alebo máte otázky ohľadom ochrany súkromia, kontaktujte nás na:
+            <a href="mailto:pejchalr@gmail.com" style="color:#d90f23; font-weight:bold;">pejchalr@gmail.com</a>.
+        </p>
+
+        <h2>6. Cookies</h2>
+        <p>
+            Táto stránka používa iba nevyhnutné súbory cookies na zabezpečenie technickej funkčnosti. 
+            Nepoužívame sledovacie ani marketingové cookies tretích strán bez vášho vedomia.
+        </p>
+
+    </main>
+
 <footer class="footer">
-    <div class="footer-grid">
-
-        <div>
-            <h4 class="footer-title">SAILH</h4>
-            <p class="footer-text">
-                Slovenská asociácia in-line hokeja.<br><br>
-                Oreganová 1178/1<br><br>
-                900 46 Most pri Bratislave - Studené<br><br>
-                Registračné číslo: VVS/1-900/90-72711<br>
-<br>
+        <div class="footer-container">      
+            <div class="footer-col">
+                <h4 class="footer-title">SAILH</h4>
+                <div class="footer-line"></div>
+                <p class="footer-text">
+                    Slovenská asociácia in-line hokeja.<br>
+                    Oreganová 1178/1<br>
+                    900 46 Most pri Bratislave<br>
+                    Studené
+                </p>
+                <p class="footer-text" style="margin-top: 15px; font-size: 0.85em; opacity: 0.7;">
+                    Registračné číslo: VVS/1-900/90-72711
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4 class="footer-title">Rýchle Odkazy</h4>
+                <div class="footer-line"></div>
+                <ul class="footer-links">
+                    <li><a href="https://ives.minv.sk/rmno/detail/13542098669735168654">O asociácii</a></li>
+                    <li><a href="privacy-policy.html">Ochrana údajov</a></li>
+                    <li><a href="donate.html">Darujte 2%</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4 class="footer-title">Kontakt</h4>
+                <div class="footer-line"></div>
+                <div class="contact-item">
+                    <span class="icon">📧</span> 
+                    <a href="mailto:pejchalr@gmail.com">pejchalr@gmail.com</a>
+                </div>
+                <div class="contact-item">
+                    <span class="icon">📞</span> 
+                    <span>+421 905 627 715</span>
+                </div>
+                <div class="contact-item" style="margin-top: 20px;">
+                    <strong style="color:#d90f23; margin-right:5px;">IČO:</strong> 57133671
+                </div>
+                <div class="contact-item">
+                    <strong style="color:#d90f23; margin-right:5px;">DIČ:</strong> 2122632930
+                </div>
+            </div>
         </div>
-
-        <div>
-            <h4 class="footer-title">Navigácia</h4>
-            <ul class="footer-list">
-                <li><a href="https://ives.minv.sk/rmno/detail/13542098669735168654">O asociácii</a></li>
-                <li><a href="clubs.html">Kluby</a></li>
-                <li><a href="https://www.inlineliga.sk/">Amatérska Liga</a></li>
-                <li><a href="partners.html">Partneri</a></li>
-                <li><a href="media.html">Médiá</a></li>
-                <li><a href="calendar.html">Kalendár</a></li>
-                <li><a href="privacy-policy.html">Ochrana údajov</a></li>
-            </ul>
+        <div class="footer-bottom">
+            © 2026 SAILH - Všetky práva vyhradené
         </div>
+    </footer>
 
-        <div>
-            <h4 class="footer-title">Kontakt</h4>
-            <p class="footer-text"><i class="fas fa-at icon-red"></i> pejchalr@gmail.com</p>
-            <p class="footer-text"><i class="fas fa-phone icon-red"></i> +421 905 627 715</p>
-            <p class="footer-text"><i class="fas fa-id-card icon-red"></i> IČO: 57133671</p>
-            <p class="footer-text"><i class="fas fa-file-alt icon-red"></i> DIČ: 2122632930</p>
-        </div>
-
-        <div>
-            <h4 class="footer-title">Newsletter</h4>
-            <p class="footer-text">Prihláste sa na odber noviniek:</p>
-            <input type="email" placeholder="Váš e-mail" class="footer-input">
-            <button class="footer-btn">Prihlásiť</button>
-        </div>
-
-    </div>
-
-    <div class="footer-bottom">© 2025 SAILH - Všetky práva vyhradené</div>
-</footer>
 </body>
 </html>
