--- a/standing.html
+++ b/standing.html
@@ -120,14 +120,14 @@
             <img src="logo.png" alt="SAILH Logo" class="logo-img">
         </div>
         <div class="site-title">Slovenská asociácia in-line hokeja</div>
-        <nav class="menu">
+        <nav class="menu" role="navigation" aria-label="Hlavné menu">
             <a href="index.html">Domov</a>
-            <a href="news.html">Novinky</a>
-            <a href="standings.html" class="active">Výsledky & Tabuľky</a>
-            <a href="gallery.html">Galéria</a>
+            <a href="standing.html" class="active">Extraliga</a>
+            <a href="https://www.inlineliga.sk">Amatérska liga</a>
             <a href="clubs.html">Kluby</a>
-            <a href="partners.html">Partneri</a>
-            <a href="donate.html">Darujte 2%</a>
+            <a href="news.html">MIHWA</a>
+            <a href="gallery.html">Galéria</a>            
+            <a href="partners.html">Partneri</a>              
         </nav>
     </header>
 
@@ -188,8 +188,52 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="footer-bottom">© 2026 SAILH</div>
+<footer class="footer">
+        <div class="footer-container">      
+            <div class="footer-col">
+                <h4 class="footer-title">SAILH</h4>
+                <div class="footer-line"></div>
+                <p class="footer-text">
+                    Slovenská asociácia in-line hokeja.<br>
+                    Oreganová 1178/1<br>
+                    900 46 Most pri Bratislave<br>
+                    Studené
+                </p>
+                <p class="footer-text" style="margin-top: 15px; font-size: 0.85em; opacity: 0.7;">
+                    Registračné číslo: VVS/1-900/90-72711
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4 class="footer-title">Rýchle Odkazy</h4>
+                <div class="footer-line"></div>
+                <ul class="footer-links">
+                    <li><a href="https://ives.minv.sk/rmno/detail/13542098669735168654">O asociácii</a></li>
+                    <li><a href="privacy-policy.html">Ochrana údajov</a></li>
+                    <li><a href="donate.html">Darujte 2%</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4 class="footer-title">Kontakt</h4>
+                <div class="footer-line"></div>
+                <div class="contact-item">
+                    <span class="icon">📧</span> 
+                    <a href="mailto:pejchalr@gmail.com">pejchalr@gmail.com</a>
+                </div>
+                <div class="contact-item">
+                    <span class="icon">📞</span> 
+                    <span>+421 905 627 715</span>
+                </div>
+                <div class="contact-item" style="margin-top: 20px;">
+                    <strong style="color:#d90f23; margin-right:5px;">IČO:</strong> 57133671
+                </div>
+                <div class="contact-item">
+                    <strong style="color:#d90f23; margin-right:5px;">DIČ:</strong> 2122632930
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            © 2026 SAILH - Všetky práva vyhradené
+        </div>
     </footer>
 
     <script>
