--- a/clubs.html
+++ b/clubs.html
@@ -125,7 +125,7 @@
             <a href="standing.html">Extraliga</a>
             <a href="https://www.inlineliga.sk">Amatérska liga</a>
             <a href="clubs.html" class="active">Kluby</a>
-            <a href="news.html">MIHWA</a>
+            <a href="https://www.mihwa.org/">MIHWA</a>
             <a href="gallery.html">Galéria</a>            
             <a href="partners.html">Partneri</a>              
         </nav>
