--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="standing.html">Extraliga</a>
             <a href="https://www.inlineliga.sk">Amatérska liga</a>
             <a href="clubs.html">Kluby</a>
-            <a href="news.html">MIHWA</a>
+            <a href="https://www.mihwa.org/">MIHWA</a>
             <a href="gallery.html">Galéria</a>            
             <a href="partners.html">Partneri</a>              
         </nav>
@@ -55,7 +55,7 @@
         </main>
 
         <aside class="dashboard-right">
-            <a href="standings.html" class="action-btn btn-results">
+            <a href="standing.html" class="action-btn btn-results">
                 📊 Výsledky & Tabuľky
             </a>
             <a href="https://www.youtube.com/@HOCKEYTV-LIVE/live" target="_blank" class="action-btn btn-live">
