--- a/donate.html
+++ b/donate.html
@@ -93,7 +93,7 @@
             <a href="standing.html">Extraliga</a>
             <a href="https://www.inlineliga.sk">Amatérska liga</a>
             <a href="clubs.html">Kluby</a>
-            <a href="news.html">MIHWA</a>
+            <a href="https://www.mihwa.org/">MIHWA</a>
             <a href="gallery.html">Galéria</a>            
             <a href="partners.html">Partneri</a>              
         </nav>
