--- a/standing.html
+++ b/standing.html
@@ -145,7 +145,7 @@
             <a href="standing.html" class="active">Extraliga</a>
             <a href="https://www.inlineliga.sk">Amatérska liga</a>
             <a href="clubs.html">Kluby</a>
-            <a href="news.html">MIHWA</a>
+            <a href="https://www.mihwa.org/">MIHWA</a>
             <a href="gallery.html">Galéria</a>
             <a href="partners.html">Partneri</a>
         </nav>
