--- a/gallery.html
+++ b/gallery.html
@@ -147,7 +147,7 @@
         <h1 style="text-align:center; color:#244b94; margin-bottom:40px;">Galéria & Médiá</h1>
 
         <div class="social-grid">
-            <a href="https://www.youtube.com/@HOCKEYTV-LIVE" target="_blank" class="social-card card-yt">
+            <a href="https://www.youtube.com/watch?v=g5yqWOdx2bk&list=PL1kACl5aXrPhC5xbG7cgHFi72ssboewMk" target="_blank" class="social-card card-yt">
                 <div class="social-icon">▶</div>
                 <div class="social-title">YouTube Kanál</div>
                 <div class="social-desc">Sledujte živé prenosy a záznamy zo zápasov.</div>
